--- a/nuxeo-user-profile/src/main/resources/web/nuxeo.war/widgets/avatar_widget_template.xhtml
+++ b/nuxeo-user-profile/src/main/resources/web/nuxeo.war/widgets/avatar_widget_template.xhtml
@@ -6,8 +6,8 @@
 
   <c:if test="#{widget.mode == 'edit'}">
 
-    <nxu:inputFile id="#{widget.id}_file" value="#{field}"
-      filename="#{field.filename}" required="#{widget.required}"
+    <nxu:inputFile id="#{widget.id}_file" value="#{field_1}"
+      filename="#{field_1.filename}" required="#{widget.required}"
       editFilename="false">
       <nxu:validateFileMimetype extensions=".jpg, .png, .gif" />
     </nxu:inputFile>
@@ -18,16 +18,16 @@
 
   <c:if test="#{widget.mode != 'edit'}">
 
-    <c:if test="#{empty field}">
+    <c:if test="#{empty field_1}">
       <h:graphicImage value="/icons/missing_avatar.png"
         title="Missing profile avatar" alt="Missing profile avatar" />
     </c:if>
 
-    <c:if test="#{not empty field}">
+    <c:if test="#{not empty field_1}">
       <nxu:set var="image_url"
-        value="#{nxd:fileUrl('downloadFile', value, widget.fieldDefinitions[0].propertyName, field.filename)}">
-        <img src="#{image_url}" title="#{field.filename}"
-          alt="#{field.filename}" width="#{widget.properties['width']}" />
+        value="#{nxd:fileUrl('downloadFile', field_0, widget.properties.file_property_name, field_1.filename)}">
+        <img src="#{image_url}" title="#{field_1.filename}"
+          alt="#{field_1.filename}" width="#{widget.properties['width']}" />
       </nxu:set>
     </c:if>
 
