NXP-7051: follow changes

--- a/ftest/selenium/tests/testNavigateSecurityError.html
+++ b/ftest/selenium/tests/testNavigateSecurityError.html
@@ -63,7 +63,7 @@
 </tr>
 <tr>
   <td>assertTitle</td>
-  <td>Nuxeo DM - Default domain</td>
+  <td>Nuxeo CAP - Default domain</td>
   <td></td>
 </tr>
 <tr>
