--- a/nuxeo-user-profile/src/main/resources/web/nuxeo.war/users/view_user.xhtml
+++ b/nuxeo-user-profile/src/main/resources/web/nuxeo.war/users/view_user.xhtml
@@ -9,7 +9,7 @@
       <a4j:form id="viewUser"
         rendered="#{userManagementActions.detailsMode == 'view'}">
         <nxl:layout name="summary_user_profile_layout" mode="view"
-          value="#{userProfileActions.selectedUserProfileDocument}" />
+          value="#{userProfileActions.selectedUserProfile}" />
       </a4j:form>
     </ui:define>
   </ui:composition>
