NXP-7390: update tests verifying error when include facelet is not found

--- a/ftest/selenium/tests/testErrorPage.html
+++ b/ftest/selenium/tests/testErrorPage.html
@@ -98,37 +98,17 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Page Not Found</td>
+  <td>ERROR: some facelet is not found: /error_test_web/error_ui_include_not_found.xhtml</td>
   <td></td>
 </tr>
 <tr>
-  <td>verifyElementPresent</td>
+  <td>verifyElementNotPresent</td>
   <td>link=back</td>
   <td></td>
 </tr>
 <tr>
-  <td>waitForOpensocialGadgetsToLoad</td>
-  <td>content</td>
-  <td>60000</td>
-</tr>
-<tr>
-  <td>verifyElementPresent</td>
-  <td>link=change username</td>
-  <td></td>
-</tr>
-<tr>
-  <td>verifyTextNotPresent</td>
-  <td>show stacktrace</td>
-  <td></td>
-</tr>
-<tr>
-  <td>verifyTextNotPresent</td>
-  <td>show context dump</td>
-  <td></td>
-</tr>
-<tr>
-  <td>clickAndWait</td>
-  <td>link=back</td>
+  <td>open</td>
+  <td>/nuxeo/</td>
   <td></td>
 </tr>
 <tr>
@@ -626,7 +606,6 @@
   <td>show context dump</td>
   <td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
