--- a/ftest/selenium/tests/testErrorPage.html
+++ b/ftest/selenium/tests/testErrorPage.html
@@ -97,6 +97,16 @@
   <td></td>
 </tr>
 <tr>
+  <td>storeEval</td>
+  <td>selenium.browserbot.getCurrentWindow().document.body.innerHTML</td>
+  <td>innerhtml</td>
+</tr>
+<tr>
+  <td>echo</td>
+  <td>${innerhtml}</td>
+  <td></td>
+</tr>
+<tr>
   <td>verifyTextPresent</td>
   <td>ERROR: some facelet is not found: /error_test_web/error_ui_include_not_found.xhtml</td>
   <td></td>
