DAM-612: working on 5.4.2 alignment

--- a/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/administration.xhtml
+++ b/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/administration.xhtml
@@ -17,7 +17,7 @@
 
       <a4j:outputPanel id="administrationView">
         <ui:include src="/incl/admin_action_tabs.xhtml"/>
-        <div class="tabsContent"><ui:include src="#{webActions.currentAdminTabAction.link}" /></div>
+        <div class="tabsContent"><ui:include src="#{damWebActions.currentAdminTabAction.link}" /></div>
       </a4j:outputPanel>
     </a4j:region>
 
