--- a/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/search_filter.xhtml
+++ b/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/search_filter.xhtml
@@ -22,6 +22,11 @@
       action="#{filterActions.clearFilters}"
       reRender="filterFormPanel,filterResultTable,selectionView" eventsQueue="filterFormQueue" />
 
+    <a4j:commandLink action="#{importActions.invalidateImportContext}" onclick="javascript:Richfaces.showModalPanel('importSetFormPanel');"
+      rendered="#{importActions.importFolders.size() > 0}" id="importset_creation_button" reRender="importSetPanel">
+      <h:outputText class="importButton" value="${messages['label.action.createImportSet']}"/>
+    </a4j:commandLink>
+
     <!-- this bit needs to be outside the rich:panelMenu -->
     <a4j:commandButton id="filterFormSubmit" type="submit"
       styleClass="button" style="visibility: hidden"
