--- a/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/filtered_search_results_content.xhtml
+++ b/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/filtered_search_results_content.xhtml
@@ -17,25 +17,25 @@
         <div class="actionPanelViews">
           <div class="resultViewMode">
             <a4j:commandLink id="showListLink"
-              action="#{webActions.showListLink}"
+              action="#{damWebActions.showListLink}"
               reRender="filterResultTable"
               styleClass="ListViewIcon">
               <h:graphicImage id="showList" url="/icons/list_view.png"
-                rendered="#{!webActions.showList}" />
+                rendered="#{!damWebActions.showList}" />
               <h:graphicImage id="showListSelected"
                 url="/icons/list_view_selected.png"
-                rendered="#{webActions.showList}" />
+                rendered="#{damWebActions.showList}" />
             </a4j:commandLink>
 
             <a4j:commandLink id="showThumbnailLink"
-              action="#{webActions.showThumbnailLink}"
+              action="#{damWebActions.showThumbnailLink}"
               reRender="filterResultTable"
               styleClass="ThumbViewIcon">
               <h:graphicImage id="showThumbnail" url="/icons/thumbnail_view.png"
-                rendered="#{!webActions.showThumbnail}" />
+                rendered="#{!damWebActions.showThumbnail}" />
               <h:graphicImage id="showThumbnailSelected"
                 url="/icons/thumbnail_view_selected.png"
-                rendered="#{webActions.showThumbnail}" />
+                rendered="#{damWebActions.showThumbnail}" />
             </a4j:commandLink>
           </div>
           <f:subview id="clipboard">
