--- a/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/documents_table_content.xhtml
+++ b/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/documents_table_content.xhtml
@@ -13,22 +13,27 @@
   <a4j:form id="#{documents.name}">
     <a4j:region>
     <a4j:outputPanel id="documentsList">
-    <f:subview rendered="#{documents.rowCount == 0}">
-        <div class="warningMessage">
-        <h:outputText value="#{messages['label.content.empty.search']}" />
-        </div>
-    </f:subview>
+      <f:subview rendered="#{documents.rowCount == 0}">
+          <div class="warningMessage">
+          <h:outputText value="#{messages['label.content.empty.search']}" />
+          </div>
+      </f:subview>
 
-    <f:subview id="showListSubview" rendered="#{damWebActions.showList}">
-	  <ui:decorate template="/incl/documents_table.xhtml" >
-	    <ui:param name="documents" value="#{documents}"/>
-	  </ui:decorate>
-	</f:subview>
-	<f:subview id="showListThumbnail" rendered="#{damWebActions.showThumbnail}">
-	  <ui:decorate template="/incl/thumbnail_documents_table.xhtml" >
-	    <ui:param name="documents" value="#{documents}"/>
-	  </ui:decorate>
-	</f:subview>
+      <f:subview id="showListSubview" rendered="#{damWebActions.showList}">
+        <ui:decorate template="/incl/documents_table.xhtml" >
+          <ui:param name="documents" value="#{documents}"/>
+        </ui:decorate>
+      </f:subview>
+      <f:subview id="showListThumbnail" rendered="#{damWebActions.showThumbnail}">
+        <ui:decorate template="/incl/thumbnail_documents_table.xhtml" >
+          <ui:param name="documents" value="#{documents}"/>
+        </ui:decorate>
+      </f:subview>
+      <f:subview id="showListBigThumbnail" rendered="#{damWebActions.showBigThumbnail}">
+        <ui:decorate template="/incl/big_thumbnail_documents_table.xhtml" >
+          <ui:param name="documents" value="#{documents}"/>
+        </ui:decorate>
+      </f:subview>
     </a4j:outputPanel>
     </a4j:region>
   </a4j:form>
