NXP-7484: Fix close label in path tree selection popup

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/select_path_tree_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/select_path_tree_widget_template.xhtml
@@ -78,7 +78,7 @@
   <div id="#{widget.id}_tree" class="genericPopUp treeSearchPopUp">
   <div class="closePopUpHeader"><span class="popUpTitle"><h:outputText
     value="#{messages['label.search.popup.title']}" /></span> <span
-    class="closePopUp" onclick="hideTree('##{widget.id}_tree');">Close</span>
+    class="closePopUp" onclick="hideTree('##{widget.id}_tree');">#{messages['label.search.popup.close']}</span>
   <div style="clear: both;"></div>
   </div>
   <div class="popUpContent">
