DAM-617: Update theme

--- a/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/search_filter.xhtml
+++ b/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/search_filter.xhtml
@@ -15,6 +15,11 @@
   <a4j:form id="filterForm">
 
   <div class="actionBar">
+    <a4j:commandLink styleClass="button import" action="#{importActions.invalidateImportContext}" onclick="javascript:Richfaces.showModalPanel('importSetFormPanel');"
+      rendered="#{importActions.importFolders.size() > 0}" id="importset_creation_button" reRender="importSetPanel">
+      <h:outputText class="importButton" value="${messages['label.action.createImportSet']}"/>
+    </a4j:commandLink>
+
     <a4j:commandButton id="filterFormClear"
       type="button"
       styleClass="button"
@@ -22,14 +27,9 @@
       action="#{filterActions.clearFilters}"
       reRender="filterFormPanel,filterResultTable,selectionView" eventsQueue="filterFormQueue" />
 
-    <a4j:commandLink action="#{importActions.invalidateImportContext}" onclick="javascript:Richfaces.showModalPanel('importSetFormPanel');"
-      rendered="#{importActions.importFolders.size() > 0}" id="importset_creation_button" reRender="importSetPanel">
-      <h:outputText class="importButton" value="${messages['label.action.createImportSet']}"/>
-    </a4j:commandLink>
-
     <!-- this bit needs to be outside the rich:panelMenu -->
     <a4j:commandButton id="filterFormSubmit" type="submit"
-      styleClass="button" style="visibility: hidden"
+      style="display: none;"
       value="#{messages['label.action.filter.doFulltextSearch']}"
       action="#{filterActions.invalidateProvider}"
       reRender="filterResultTable,selectionView" eventsQueue="filterFormQueue" />
