DAM-617, DAM-616, DAM-615: Update login screen, style thumbnail view and align theme on DM

--- a/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/big_thumbnail_documents_table.xhtml
+++ b/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/big_thumbnail_documents_table.xhtml
@@ -13,7 +13,7 @@
   <div id="dataTableContainer">
 
     <a4j:outputPanel id="dataThumbnailContainer" layout="block" >
-      <a4j:support event="onclick" reRender="ddd, selection_buttons" onclick="if (event.ctrlKey || event.metaKey) {return false;};"
+      <a4j:support event="onclick" reRender="dataThumbnailContainer, selection_buttons" onclick="if (event.ctrlKey || event.metaKey) {return false;};"
       action="#{bulkSelectActions.clearWorkingList('CURRENT_SELECTION')}" />
 
   <ui:repeat id="dataTable" var="row" value="#{documents.rows}">
