DAM-612: update selenium tests

--- a/nuxeo-dam-distribution/ftest/selenium/tests/navigation/testSchemaInherited.html
+++ b/nuxeo-dam-distribution/ftest/selenium/tests/navigation/testSchemaInherited.html
@@ -58,9 +58,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
+	<td>verifyTextPresent</td>
 	<td>Extra Wide With Extra Wide File Name That Has Spaces And Never Seems To End</td>
-	</td></td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
@@ -89,8 +89,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
+	<td>verifyTextPresent</td>
 	<td>P-01</td>
+  <td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
@@ -139,8 +140,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
+	<td>verifyTextPresent</td>
 	<td>sampleMPG</td>
+  <td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
@@ -209,8 +211,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
+	<td>verifyTextPresent</td>
 	<td>sampleWAV</td>
+  <td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
