--- a/nuxeo-dam-distribution/ftest/selenium/tests/suite.html
+++ b/nuxeo-dam-distribution/ftest/selenium/tests/suite.html
@@ -14,6 +14,9 @@
    <td><a href="import/loginAndImportAssets.html">login</a></td>
   </tr>
   <tr>
+   <td><a href="usermanagement/createUsers.html">createUsers</a></td>
+  </tr>
+  <tr>
     <td><a href="./import/testSortColumn.html">testSortColumn</a></td>
   </tr>
   <tr>
@@ -53,18 +56,6 @@
     <td><a href="./ipRights/testIpRights.html">testIpRights</a></td>
   </tr>
   <tr>
-    <td><a href="./usermanagement/createUsers.html">createUsers</a></td>
-  </tr>
-  <tr>
-    <td><a href="./usermanagement/createGroups.html">createGroups</a></td>
-  </tr>
-  <tr>
-    <td><a href="./usermanagement/searchUsers.html">searchUsers</a></td>
-  </tr>
-  <tr>
-    <td><a href="./usermanagement/searchGroups.html">searchGroups</a></td>
-  </tr>
-  <tr>
     <td><a href="./comments/addAndDeleteCommAsAdmin.html">addAndDeleteCommAsAdmin</a></td>
   </tr>
   <tr>
@@ -75,17 +66,6 @@
   </tr>
   <tr>
     <td><a href="./delete/testDeleteAssetThumbnail.html">testDeleteAssetThumbnail</a></td>
-  </tr>
-  <tr>
-    <td><a href="./usermanagement/deleteUser.html">deleteUser</a></td>
-  </tr>
-  <!--
-  <tr>
-    <td><a href="./usermanagement/modifyGroup.html">modifyGroup</a></td>
-  </tr>
-  -->
-  <tr>
-    <td><a href="./usermanagement/deleteGroup.html">deleteGroup</a></td>
   </tr>
   <tr>
     <td><a href="./folders/create.html">testCreateFolder</a></td>
