--- a/nuxeo-dam-distribution/ftest/selenium/tests/folders/edit.html
+++ b/nuxeo-dam-distribution/ftest/selenium/tests/folders/edit.html
@@ -43,22 +43,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Administration</td>
+	<td>link=Admin Center</td>
 	<td></td>
 </tr>
 <tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
+	<td>clickAndWait</td>
 	<td>link=Folders</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -88,7 +78,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>viewFolder:nxl_folderAdmin_1:nxw_description_2</td>
+	<td>viewFolder:nxl_folderAdmin_1:nxw_description_1</td>
 	<td>Edited Folder Description</td>
 </tr>
 <tr>
