--- a/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/thumbnail_documents_table.xhtml
+++ b/nuxeo-dam-webapp/src/main/resources/web/nuxeo.war/incl/thumbnail_documents_table.xhtml
@@ -25,7 +25,7 @@
           <a4j:commandLink id="imageLink" styleClass="thumbViewPictureLink"
             action="#{documentActions.setCurrentSelection(row.data)}"
             onclick="if (event.ctrlKey || event.metaKey) {return false;} try {event.stopPropagation();} catch (err) {event.cancelBubble = true;}"
-            reRender="dataTable, selectionView">
+            reRender="dataThumbnailContainer, selectionView">
             <nxh:graphicImage id="theImage"
               url="#{nxd:fileUrl('downloadPicture', row.data, 'Thumbnail:content', row.data.dublincore.modified)}?conversationId=#{conversation.id}"
               rendered="#{row.data.hasSchema('picture')}"
@@ -42,7 +42,7 @@
             <span id="title_#{row.data.ref}" class="#{nxu:test(documentActions.currentSelection == row.data, 'selected', '')}">
             <a4j:commandLink id="titleLink"
               onclick="if (event.ctrlKey || event.metaKey) {return false;} try {event.stopPropagation();} catch (err) {event.cancelBubble = true;}"
-              action="#{documentActions.setCurrentSelection(row.data)}" reRender="dataTable, selectionView">
+              action="#{documentActions.setCurrentSelection(row.data)}" reRender="dataThumbnailContainer, selectionView">
               <nxh:outputText value="#{documentActions.getTitleCropped(row.data, 15)}"
                 title="#{row.data.dc.title}"
                 styleClass="thumbViewTitle"/>
