--- a/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/annotations_popup.xhtml
+++ b/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/annotations_popup.xhtml
@@ -16,10 +16,9 @@
     <h:form id="document_view">
 
       <script type="text/javascript">
-        <!--
         var annotationConfiguration = {
           annoteaServerUrl : "#{baseURL}Annotations",
-          annotationCssUrl : "/nuxeo/org.nuxeo.ecm.platform.annotations.gwt.AnnotationPanel/annotation-style.css",
+          annotationCssUrl : "#{contextPath}/org.nuxeo.ecm.platform.annotations.gwt.AnnotationPanel/annotation-style.css",
           previewUrl: "#{previewActions.previewWithBlobPostProcessingURL}",
           documentUrl: "#{nxd:documentUrl(currentDocument)}"
         };
@@ -28,16 +27,21 @@
           repositoryName : "#{currentDocument.repositoryName}",
           documentId : "#{currentDocument.id}"
         };
-        -->
+
+        jQuery(document).ready(function() {
+          // we know we are in a fancybox
+          jQuery('#display').height(jQuery('#fancybox-content', window.parent.document).height() - 10);
+        });
       </script>
 
       <script type="text/javascript"
-        src='/nuxeo/org.nuxeo.ecm.platform.annotations.gwt.AnnotationModule/org.nuxeo.ecm.platform.annotations.gwt.AnnotationModule.nocache.js'></script>
+        src='#{contextPath}/org.nuxeo.ecm.platform.annotations.gwt.AnnotationModule/org.nuxeo.ecm.platform.annotations.gwt.AnnotationModule.nocache.js'></script>
 
       <iframe src="javascript:''" id="__gwt_historyFrame"
         style="width: 0; height: 0; border: 0"></iframe>
 
-      <div id="display" style="height: 694px"/>
+      <div id="display">
+      </div>
 
     </h:form>
 
