NXP-7543: replace /nuxeo by usage of contextPath

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/studio.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/studio.xhtml
@@ -6,7 +6,7 @@
 
   <a4j:outputPanel id="connectAppListing">
     <div class="actionBar marketplace">
-      <span class="marketplaceLogo"><a target="_blank" href="https://doc.nuxeo.com/display/Studio/Nuxeo+Studio+Documentation+Center"><img src="/nuxeo/img/nuxeo_studio_logo.png" alt="Nuxeo Studio" /></a></span>
+      <span class="marketplaceLogo"><a target="_blank" href="https://doc.nuxeo.com/display/Studio/Nuxeo+Studio+Documentation+Center"><img src="#{contextPath}/img/nuxeo_studio_logo.png" alt="Nuxeo Studio" /></a></span>
       <span class="label"><a class="connectLink" target="_blank" href="https://doc.nuxeo.com/display/Studio/Nuxeo+Studio+Documentation+Center"><h:outputText value="#{messages['label.tab.studio.intro']}"/></a></span>
     </div>
 
