DAM-618: use fancybox for import and bulk edit popup

--- a/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/new_import_set.xhtml
+++ b/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/new_import_set.xhtml
@@ -89,7 +89,7 @@
         value="#{messages['command.create']}" action="#{importActions.createImportSet}"
         onclick="processInProgress()"
         data="#{facesContext.maximumSeverity.ordinal ge 2}"
-        oncomplete="if (data) { hideWaiter() } else { processFinished() };"
+        oncomplete="processFinished()"
         reRender="filterFormPanel, filterResultTable, selectionView, importset_form" />
 
       <a4j:commandButton styleClass="button"
