--- a/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/bulk_edit_popup.xhtml
+++ b/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/bulk_edit_popup.xhtml
@@ -9,38 +9,29 @@
   xmlns:rich="http://richfaces.org/rich"
   xmlns:nxl="http://nuxeo.org/nxforms/layout">
 
-  <rich:modalPanel id="bulkEditPanel" autosized="true"
-        styleClass="ImportSetFormPanel">
-    <f:facet name="header">
-      <h:panelGroup>
+  <div style="display:none">
+    <div id="bulkEditPopup">
+      <a4j:outputPanel id="bulkEditPanel">
+      <h3>
         <h:outputText value="${messages['popup.label.bulk.edit']}"/>
-      </h:panelGroup>
-    </f:facet>
-    <f:facet name="controls">
-      <h:panelGroup>
-        <h:graphicImage value="/img/close.png"
-          styleClass="hidelink" id="bulkEditHidelink" />
-        <rich:componentControl for="bulkEditPanel" attachTo="bulkEditHidelink"
-          operation="hide" event="onclick" />
-      </h:panelGroup>
-    </f:facet>
+      </h3>
+      <a4j:form id="bulk_edit_form">
+        <c:set var="jsfContainerId" value="bulk_edit_form" />
+        <nxl:layout name="bulk_edit" mode="edit"
+          value="#{bulkEditActions.bulkEditDocumentModel}"/>
 
-    <a4j:form id="bulk_edit_form">
-      <c:set var="jsfContainerId" value="bulk_edit_form" />
-      <nxl:layout name="bulk_edit" mode="edit"
-        value="#{bulkEditActions.bulkEditDocumentModel}"/>
-
-      <p class="buttonsGadget">
-        <a4j:commandButton styleClass="button"
-          action="#{bulkEditActions.bulkEditSelectionNoRedirect}" value="#{messages['command.save']}"
-          oncomplete="Richfaces.hideModalPanel('bulkEditPanel');"
-          reRender="filterResultTable, selectionView, bulkEditPanel" />
-        <a4j:commandButton styleClass="button"
-          action="#{bulkEditActions.cancel}" value="#{messages['command.cancel']}"
-          oncomplete="Richfaces.hideModalPanel('bulkEditPanel');"
-          reRender="bulkEditPanel" />
-      </p>
-    </a4j:form>
-
-  </rich:modalPanel>
+        <p class="buttonsGadget">
+          <a4j:commandButton styleClass="button"
+            action="#{bulkEditActions.bulkEditSelectionNoRedirect}" value="#{messages['command.save']}"
+            reRender="filterResultTable, selectionView, bulkEditPanel"
+            oncomplete="jQuery.fancybox.close();"/>
+          <a4j:commandButton styleClass="button"
+            action="#{bulkEditActions.cancel}" value="#{messages['command.cancel']}"
+            reRender="bulkEditPanel"
+            oncomplete="jQuery.fancybox.close();"/>
+        </p>
+      </a4j:form>
+      </a4j:outputPanel>
+    </div>
+  </div>
 </div>
