--- a/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/dam_includes.xhtml
+++ b/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/dam_includes.xhtml
@@ -9,23 +9,13 @@
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:c="http://java.sun.com/jstl/core">
 
-  <script type="text/javascript" src="#{baseURL}js/?scripts=importSetForm.js"></script>
-
-  <rich:modalPanel id="importSetFormPanel" autosized="true" styleClass="ImportSetFormPanel">
-    <f:facet name="header">
-      <h:panelGroup>
+  <div style="display:none">
+    <div id="importSetFormPopup">
+      <h3>
         <h:outputText value="${messages['popup.label.creation.importSet']}"/>
-    </h:panelGroup>
-  </f:facet>
-  <f:facet name="controls">
-    <h:panelGroup>
-      <h:graphicImage value="/img/close.png"
-          styleClass="hidelink" id="hidelink" />
-        <rich:componentControl for="importSetFormPanel" attachTo="hidelink"
-          operation="hide" event="onclick" />
-      </h:panelGroup>
-    </f:facet>
-    <ui:include src="/dam/incl/new_import_set.xhtml" />
-  </rich:modalPanel>
+      </h3>
+      <ui:include src="/dam/incl/new_import_set.xhtml" />
+    </div>
+  </div>
 
 </div>
