DAM-618: fix annotations popup not working after rerender

--- a/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/tabs/asset_view.xhtml
+++ b/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/tabs/asset_view.xhtml
@@ -59,8 +59,18 @@
        </td>
      </tr>
     </table>
-
-
+    <script type="text/javascript">
+      jQuery("#showAnnotationsButton").fancybox({
+        'width': '95%',
+        'height': '95%',
+        'autoScale': true,
+        'transitionIn': 'none',
+        'transitionOut': 'none',
+        'type': 'iframe',
+        'enableEscapeButton': true,
+        'centerOnScroll': true
+      });
+    </script>
 
     <a4j:form id="assetView">
       <div class="documentPreviewTitle">
