DAM-618: put back waiter when importing

--- a/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/dam_includes.xhtml
+++ b/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/dam_includes.xhtml
@@ -9,6 +9,8 @@
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:c="http://java.sun.com/jstl/core">
 
+  <ui:include src="/dam/incl/waiter.xhtml"/>
+
   <div style="display:none">
     <div id="importSetFormPopup">
       <h3>
