--- a/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/waiter.xhtml
+++ b/nuxeo-dam-web/src/main/resources/web/nuxeo.war/dam/incl/waiter.xhtml
@@ -1,9 +1,9 @@
 <div xmlns="http://www.w3.org/1999/xhtml"
   xmlns:h="http://java.sun.com/jsf/html" class="waiterBlock">
   <div id="importsetCreationWaiter" class="importsetCreationWaiter">
-    <div class="waiter">  
+    <div class="waiter">
       <p class="waiterParagraph">
-        <h:graphicImage value="img/standard_waiter.gif"/>
+        <h:graphicImage value="dam/img/standard_waiter.gif"/>
       </p>
       <p>
         <h:outputText value="${messages['label.processInProgress']}"/>
