--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectRemote.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectRemote.xhtml
@@ -6,7 +6,7 @@
 
  <a4j:outputPanel id="connectAppListing">
   <div class="actionBar marketplace">
-    <span class="marketplaceLogo"><a target="_blank" href="https://connect.nuxeo.com/nuxeo/site/marketplace"><img src=#{contextPath}/img/nuxeo_marketplace_logo.png" alt="Nuxeo Marketplace" /></a></span>
+    <span class="marketplaceLogo"><a target="_blank" href="https://connect.nuxeo.com/nuxeo/site/marketplace"><img src="#{contextPath}/img/nuxeo_marketplace_logo.png" alt="Nuxeo Marketplace" /></a></span>
     <span class="label"><a class="connectLink" target="_blank" href="https://connect.nuxeo.com/nuxeo/site/marketplace"><h:outputText value="#{messages['label.tab.applisting.marketplace']}"/></a></span>
   </div>
   <div class="actionBar">
